--- a/src/app/services/dialogs/dialog-help/dialog-help.component.html
+++ b/src/app/services/dialogs/dialog-help/dialog-help.component.html
@@ -4,5 +4,5 @@
     <img *ngIf="help.image1" [src]="help.image1" width="250" alt="info">
 </div>
 <div mat-dialog-actions style="display: flex; justify-content: center;">
-  <button mat-mini-fab color="default" (click)="onNoClick()"><mat-icon>close</mat-icon></button>
+  <button mat-mini-fab color="default" (click)="onNoClick()"><mat-icon color="warn">close</mat-icon></button>
 </div>
