--- a/src/app/avaliation/dobras/pb4/pb4.component.scss
+++ b/src/app/avaliation/dobras/pb4/pb4.component.scss
@@ -19,8 +19,11 @@
   .h1-title {
     width: 100%;
     height: 30px;
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 10px !important;
+    .onlyDesk {
+      font-size: 10px;
+    }
   }
   form{
     width: 100% !important;
@@ -46,4 +49,5 @@
   .section-content{
     width: 520px !important;
   }
+
 }
