--- a/src/app/services/dialogs/dialog-cardio/dialog-cardio.component.html
+++ b/src/app/services/dialogs/dialog-cardio/dialog-cardio.component.html
@@ -25,7 +25,7 @@
 <div mat-dialog-actions>
 
   <div>
-      <button mat-mini-fab (click)="save()" cdkFocusInitial><mat-icon>check</mat-icon></button>
+      <button mat-mini-fab color="default" (click)="save()" cdkFocusInitial><mat-icon color="accent">check</mat-icon></button>
   </div>
 
 </div>
