--- a/src/app/services/dialogs/dialog-medidas.component.html
+++ b/src/app/services/dialogs/dialog-medidas.component.html
@@ -27,9 +27,9 @@
   </div>
 </div>
 <div mat-dialog-actions>
-
   <div>
-      <button mat-mini-fab (click)="save()" cdkFocusInitial><mat-icon>check</mat-icon></button>
+      <button mat-mini-fab mat-dialog-close color="default"><mat-icon color="warn">close</mat-icon></button>
+      <button mat-mini-fab (click)="save()" cdkFocusInitial color="default"><mat-icon color="accent">check</mat-icon></button>
   </div>
 
 </div>
