--- a/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
+++ b/src/app/avaliation/CardioPulmunar/rockport/rockport.component.html
@@ -22,7 +22,7 @@
                             </th>
                             <th class="th-top" *ngIf="addEval">
                                 <input name="data" #data="ngModel" [ngModel]="newEvaluation.data" type="date"
-                                    class="data-input" readonly>
+                                    class="data-input">
                             </th>
                         </tr>
                     </thead>
