--- a/src/app/avaliation/CardioPulmunar/teste-banco/teste-banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-banco/teste-banco.component.html
@@ -11,7 +11,10 @@
             </mat-card>
             <mat-card [routerLink]="['/bancoymca']">
                 <mat-card-header>
-                    <mat-card-subtitle i18n="Subtitle">YMCA - 3min</mat-card-subtitle>
+                    <mat-card-subtitle i18n="Subtitle"
+                    [style.color]="(age >= 18) ? 'white' : '#AAAAAA'">
+                    YMCA - 3min
+                </mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <p><strong>Destinado a: </strong> Homens e mulheres.</p>
