--- a/src/app/avaliation/risco/qpaf/dialog-parq.html
+++ b/src/app/avaliation/risco/qpaf/dialog-parq.html
@@ -2,6 +2,6 @@
 <div mat-dialog-content>Segundo os idealizadores do questionário, recomenda-se o encaminhamento do aluno ao profissional especializado.</div>
 <div mat-dialog-actions>
   <button mat-mini-fab color="default" mat-dialog-close>
-    <mat-icon class="mat-18">close</mat-icon>
+    <mat-icon class="mat-18" color="warn">close</mat-icon>
   </button>
 </div>
