--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -3,7 +3,7 @@
     <div class="section">
         <div class="section-content">
             <h1 class="h1-title" i18n>Risco de Dor na Coluna</h1>
-            <form class="flex-form" #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+            <form class="flex-form" #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
                 <mat-card>
                     <mat-card-header>
                         <mat-card-subtitle i18n>Idade</mat-card-subtitle>
