--- a/src/app/commun/load-image/load-image.component.html
+++ b/src/app/commun/load-image/load-image.component.html
@@ -1,5 +1,5 @@
-<button type="button" mat-button color="default" (click)="fileInput.click()">
-    <mat-icon>add</mat-icon>
+<button type="button" mat-icon-button color="default" (click)="fileInput.click()">
+    <mat-icon>folder_shared</mat-icon>
 </button>
 <input hidden ngModel (change)="handleInputChange($event)" #fileInput type="file"
     name="imagem" id="file" accept="image/jpeg, image/png">
