--- a/src/app/avaliation/componente-postural/dialog-show-photo.html
+++ b/src/app/avaliation/componente-postural/dialog-show-photo.html
@@ -3,5 +3,7 @@
     <img [src]="data.photo" alt="Vista Anterior" style="width: 100%;">
 </div>
 <div mat-dialog-actions>
-    <button mat-button mat-dialog-close>Close</button>
+    <button mat-mini-fab color="default" mat-dialog-close>
+        <mat-icon color="warn">close</mat-icon>
+    </button>
 </div>
