spinner registo, anamnese, risco, antropometria e cardio

--- a/src/app/avaliation/CardioPulmunar/george/george.component.html
+++ b/src/app/avaliation/CardioPulmunar/george/george.component.html
@@ -157,20 +157,8 @@
             </div>
 
             <div class="section-info">
-<!--                 <mat-card>
-                    <mat-card-header>
-                        <mat-card-title>Especificações</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
-                        <p><strong>Faixa etária:</strong> 18 a 29 anos.</p>
-                        <p><strong>Objetivo:</strong> Correr num ritmo confortável e moderado com o tempo de prova de 8
-                            minutos
-                            para homens e 9 minutos para mulher. A FC deve ser medida no final do teste e não deverá
-                            ultrapassar as 180bpm.</p>
-                    </mat-card-content>
-                </mat-card> -->
             </div>
         </div>
     </div>
+    <app-overlay *ngIf="spinner"></app-overlay>
 </div>
