--- a/src/app/avaliation/CardioPulmunar/george2/george2.component.html
+++ b/src/app/avaliation/CardioPulmunar/george2/george2.component.html
@@ -138,22 +138,8 @@
         </div>
 
         <div class="section-info">
-<!--             <mat-card>
-                <mat-card-header>
-                    <mat-card-title>Especificações</mat-card-title>
-                </mat-card-header>
-                <mat-card-content>
-                    <p><strong>Destinado a: </strong> jovens e adultos, sedentários ou ativos.</p>
-                    <p><strong>Faixa etária:</strong> 18 a 28 anos.</p>
-                    <p><strong>Objetivo:</strong> Este protocolo é constituido por um aquecimento de 3 minutos
-                        (caminhada rápida) e
-                        em seguida ajusta-se a velocidade (auto selecionada) para correr num ritmo confortável entre 6.9
-                        a 12Km/h,
-                        não ultrapassando os 10.4Km/h no caso de mulheres ou 12Km/h no caso de homens, por mais 3
-                        minutos</p>
-                </mat-card-content>
-            </mat-card> -->
         </div>
     </div>
 </div>
+<app-overlay *ngIf="spinner"></app-overlay>
 </div>
